--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -79,7 +79,7 @@
       <siteMapNode id="content-slider" iconClass="ellipsis-h" title="Content slider" resKey="Admin.ContentManagement.ContentSlider" permissionNames="ManageContentSlider" controller="ContentSlider"  action="Index" area="Admin" />
       <siteMapNode id="message-templates" iconClass="envelope-o" title="Message templates" resKey="Admin.ContentManagement.MessageTemplates" permissionNames="ManageMessageTemplates" controller="MessageTemplate" action="List" area="Admin" />
       <siteMapNode id="polls" iconClass="tasks" title="Polls" resKey="Admin.ContentManagement.Polls" permissionNames="ManagePolls" controller="Poll" action="List" area="Admin" />
-      <siteMapNode id="widgets" iconClass="plus-square" title="Widgets" resKey="Admin.ContentManagement.Widgets" permissionNames="ManageWidgets" controller="Widget" action="List" area="Admin" />
+      <siteMapNode id="widgets" iconClass="plus-square" title="Widgets" resKey="Admin.ContentManagement.Widgets" permissionNames="ManageWidgets" controller="Widget" action="Providers" area="Admin" />
     </siteMapNode>
 
       
