--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -49,7 +49,7 @@
       <siteMapNode id="customer-roles" iconClass="group" title="Customer roles" resKey="Admin.Customers.CustomerRoles" permissionNames="ManageCustomerRoles" controller="CustomerRole" action="List" area="Admin" />
       <siteMapNode id="online-customers" iconClass="sign-in" title="Online customers" resKey="Admin.Customers.OnlineCustomers" permissionNames="ManageCustomers" controller="OnlineCustomer" action="List" area="Admin" />
       <siteMapNode id="customer-reports" iconClass="bar-chart-o" title="Customer reports" resKey="Admin.Customers.Reports" permissionNames="ManageCustomers" controller="Customer" action="Reports" area="Admin" />
-      <siteMapNode id="external-auth" iconClass="facebook-square" title="External authentication methods" resKey="Admin.Configuration.ExternalAuthenticationMethods" permissionNames="ManageExternalAuthenticationMethods" controller="ExternalAuthentication" action="Methods" area="Admin"/>
+      <siteMapNode id="external-auth" iconClass="facebook-square" title="External authentication methods" resKey="Admin.Configuration.ExternalAuthenticationMethods" permissionNames="ManageExternalAuthenticationMethods" controller="ExternalAuthentication" action="Providers" area="Admin"/>
       
       <siteMapNode isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="activity-log" iconClass="eye" title="Activity Log" resKey="Admin.Configuration.ActivityLog.ActivityLog" permissionNames="ManageActivityLog" controller="ActivityLog" action="ListLogs" area="Admin" />
