--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -118,7 +118,7 @@
         <siteMapNode id="tax-categories" title="Tax categories" resKey="Admin.Configuration.Tax.Categories" permissionNames="ManageTaxSettings" controller="Tax" action="Categories" area="Admin" />
       </siteMapNode>
       
-      <siteMapNode id="payment-methods" iconClass="credit-card" title="Payment methods" resKey="Admin.Configuration.Payment.Methods" permissionNames="ManagePaymentMethods" controller="Payment" action="Methods" area="Admin" />
+      <siteMapNode id="payment-methods" iconClass="credit-card" title="Payment methods" resKey="Admin.Configuration.Payment.Methods" permissionNames="ManagePaymentMethods" controller="Payment" action="Providers" area="Admin" />
       
       <siteMapNode id="list-settings" iconClass="bars" title="Lists" resKey="Admin.Configuration.Lists" permissionNames="ManageSettings,ManageDeliveryTimes">
         <siteMapNode id="delivery-times" xiconClass="calendar" title="Delivery Times" resKey="Admin.Configuration.DeliveryTimes" permissionNames="ManageDeliveryTimes" controller="DeliveryTime" action="List" area="Admin" />
