* More provider cleanup * Added DependentWidgetsAttribute

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Collections\QuerystringBuilder.cs" />
     <Compile Include="IActivatable.cs" />
     <Compile Include="Plugins\IConfigurable.cs" />
+    <Compile Include="Plugins\Providers\DependentWidgetsAttribute.cs" />
     <Compile Include="Plugins\Providers\DisplayOrderAttribute.cs" />
     <Compile Include="Plugins\Providers\IUserEditable.cs" />
     <Compile Include="Plugins\Providers\IProvider.cs" />
