--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -80,7 +80,7 @@
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
     <add key="sm:BizImportMediaDirectory" value="~/Media/Uploaded/static" />
-    <add key="sm:PluginsIgnoredDuringInstallation" value="Misc.DemoShop, Api.WebApi, Developer.Glimpse, Developer.DevTools" />
+    <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShop, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.DevTools" />
   </appSettings>
   
   <location path="Plugins/ImportBiz">
