Renamed plugin Froogle > SmartStore.GoogleMerchantCenter

--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -19,7 +19,7 @@
       <siteMapNode id="manufacturers" iconClass="building-o" title="Manufacturers" resKey="Admin.Catalog.Manufacturers" controller="Manufacturer" action="List" area="Admin" />
       <siteMapNode id="tags" title="Product tags" resKey="Admin.Catalog.ProductTags" controller="Product" action="ProductTags" area="Admin" iconClass="tags" />
       <siteMapNode id="stockreport" iconClass="sort-numeric-desc" title="Low stock report" resKey="Admin.Catalog.LowStockReport" controller="Product" action="LowStockReport" area="Admin" />
-
+      
       <siteMapNode id="attributes-header" isGroupHeader="true" title="Attributes" resKey="Admin.Catalog.Attributes" />
       <siteMapNode id="attributes" iconClass="list-alt" title="Products attributes" resKey="Admin.Catalog.Attributes.ProductAttributes" controller="ProductAttribute" action="List" area="Admin" />
       <siteMapNode id="specification-attributes" iconClass="list" title="Specification attributes" resKey="Admin.Catalog.Attributes.SpecificationAttributes" controller="SpecificationAttribute" action="List" area="Admin" />
@@ -61,6 +61,10 @@
       <siteMapNode id="affiliates" iconClass="group" title="Affiliates" resKey="Admin.Affiliates" permissionNames="ManageAffiliates" controller="Affiliate" action="List" area="Admin" />
       <siteMapNode id="newsletter-subscribers" iconClass="envelope" title="Newsletter subscriptions" resKey="Admin.Promotions.NewsletterSubscriptions" permissionNames="ManageNewsletterSubscribers" controller="NewsLetterSubscription" action="List" area="Admin" />
       <siteMapNode id="campaigns" iconClass="bullhorn" title="Campaigns" resKey="Admin.Promotions.Campaigns" permissionNames="ManageCampaigns" controller="Campaign" action="List" area="Admin" />
+      <siteMapNode id="promotion-feeds" iconClass="rss-square" title="Promotion Feeds" resKey="Plugins.KnownGroup.PromotionFeed">
+        <!--<siteMapNode id="blog-posts" title="Blog posts" resKey="Admin.ContentManagement.Blog.BlogPosts" controller="Blog" action="List" area="Admin" />
+        <siteMapNode id="blog-comments" title="Blog comments" resKey="Admin.ContentManagement.Blog.Comments" controller="Blog" action="Comments" area="Admin" />-->
+      </siteMapNode>
     </siteMapNode>
 
       
