--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\201409150936394_CustomerNameFormat.Designer.cs">
       <DependentUpon>201409150936394_CustomerNameFormat.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410091620122_NewRes.cs" />
+    <Compile Include="Migrations\201410091620122_NewRes.Designer.cs">
+      <DependentUpon>201410091620122_NewRes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -388,6 +392,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201409150936394_CustomerNameFormat.resx">
       <DependentUpon>201409150936394_CustomerNameFormat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410091620122_NewRes.resx">
+      <DependentUpon>201410091620122_NewRes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
