--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -4,10 +4,10 @@
     <siteMapNode id="home" title="Home" controller="Home" action="Overview" area="Admin">
       
       
-    <siteMapNode id="dashboard" title="Dashboard" resKey="Admin.Dashboard" controller="Home" action="Index" area="Admin" iconClass="home" imageUrl="~/Administration/Content/images/ap-dashboard-white.png" />
+    <siteMapNode id="dashboard" title="Dashboard" resKey="Admin.Dashboard" controller="Home" action="Index" area="Admin" iconClass="home" />
       
       
-    <siteMapNode id="catalog" title="Catalog" resKey="Admin.Catalog" permissionNames="ManageCatalog" iconClass="cubes" imageUrl="~/Administration/Content/images/ap-catalog-white.png" >
+    <siteMapNode id="catalog" title="Catalog" resKey="Admin.Catalog" permissionNames="ManageCatalog" iconClass="cubes">
       <siteMapNode id="categories" isGroupHeader="true" title="Categories" resKey="Admin.Catalog.Categories" />
       <siteMapNode id="categories-list" title="List" resKey="Admin.Common.List" controller="Category" action="List" area="Admin" iconClass="bars" />
       <siteMapNode id="categories-tree" title="Tree view" resKey="Admin.Common.Treeview" controller="Category" action="Tree" area="Admin" iconClass="sitemap" />
@@ -27,49 +27,41 @@
     </siteMapNode>
 
       
-    <siteMapNode id="sales" title="Sales" resKey="Admin.Sales" permissionNames="ManageOrders, ManageReturnRequests, ManageGiftCards" 
-                 iconClass="bar-chart-o" imageUrl="~/Administration/Content/images/ap-sales-white.png">
+    <siteMapNode id="sales" title="Sales" resKey="Admin.Sales" permissionNames="ManageOrders, ManageReturnRequests, ManageGiftCards" iconClass="bar-chart-o">
       <siteMapNode id="orders" iconClass="bar-chart-o" title="Orders" resKey="Admin.Orders" permissionNames="ManageOrders" controller="Order" action="List" area="Admin" />
       <siteMapNode id="shipments" iconClass="truck fa-flip-horizontal" title="Shipments" resKey="Admin.Orders.Shipments.List" permissionNames="ManageOrders" controller="Order" action="ShipmentList" area="Admin" />
       <siteMapNode id="recurring-payments" iconClass="repeat" title="Recurring payments" resKey="Admin.RecurringPayments" permissionNames="ManageOrders" controller="RecurringPayment" action="List" area="Admin" />
       <siteMapNode id="return-requests" iconClass="truck" title="Return requests" resKey="Admin.ReturnRequests" permissionNames="ManageReturnRequests" controller="ReturnRequest" action="List" area="Admin" />
       <siteMapNode id="gift-cards" iconClass="gift" title="Gift cards" resKey="Admin.GiftCards" permissionNames="ManageGiftCards" controller="GiftCard" action="List" area="Admin" />
-      <siteMapNode isGroupHeader="true" title="[SKIP]" />
+      <siteMapNode id="sales-sep-1" isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="shopping-carts" iconClass="shopping-cart" title="Current shopping carts" resKey="Admin.CurrentCarts" permissionNames="ManageOrders" controller="ShoppingCart" action="CurrentCarts" area="Admin" />
       <siteMapNode id="wishlists" iconClass="heart-o" title="Current wishlists" resKey="Admin.CurrentWishlists" permissionNames="ManageOrders" controller="ShoppingCart" action="CurrentWishlists" area="Admin" />
-      <siteMapNode isGroupHeader="true" title="[SKIP]" />
+      <siteMapNode id="system-sep-2" isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="bestsellers" iconClass="thumbs-up" title="Bestsellers" resKey="Admin.SalesReport.Bestsellers" permissionNames="ManageOrders" controller="Order" action="BestsellersReport" area="Admin" />
       <siteMapNode id="flopsellers" iconClass="thumbs-down" title="Products never purchased" resKey="Admin.SalesReport.NeverSold" permissionNames="ManageOrders" controller="Order" action="NeverSoldReport" area="Admin" />
     </siteMapNode>
 
       
-    <siteMapNode id="users" title="Customers" resKey="Admin.Customers" permissionNames="ManageCustomers, ManageCustomerRoles, ManageExternalAuthenticationMethods, ManageActivityLog" 
-                 iconClass="group" imageUrl="~/Administration/Content/images/ap-customers-white.png" >
+    <siteMapNode id="users" title="Customers" resKey="Admin.Customers" permissionNames="ManageCustomers, ManageCustomerRoles, ManageExternalAuthenticationMethods, ManageActivityLog" iconClass="group">
       <siteMapNode id="customers" iconClass="user" title="Customers" resKey="Admin.Customers.Customers" permissionNames="ManageCustomers" controller="Customer" action="List" area="Admin" />
       <siteMapNode id="customer-roles" iconClass="group" title="Customer roles" resKey="Admin.Customers.CustomerRoles" permissionNames="ManageCustomerRoles" controller="CustomerRole" action="List" area="Admin" />
       <siteMapNode id="online-customers" iconClass="sign-in" title="Online customers" resKey="Admin.Customers.OnlineCustomers" permissionNames="ManageCustomers" controller="OnlineCustomer" action="List" area="Admin" />
       <siteMapNode id="customer-reports" iconClass="bar-chart-o" title="Customer reports" resKey="Admin.Customers.Reports" permissionNames="ManageCustomers" controller="Customer" action="Reports" area="Admin" />
       <siteMapNode id="external-auth" iconClass="facebook-square" title="External authentication methods" resKey="Admin.Configuration.ExternalAuthenticationMethods" permissionNames="ManageExternalAuthenticationMethods" controller="ExternalAuthentication" action="Providers" area="Admin"/>
-      
-      <siteMapNode isGroupHeader="true" title="[SKIP]" />
+
+      <siteMapNode id="users-sep-1" isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="activity-log" iconClass="eye" title="Activity Log" resKey="Admin.Configuration.ActivityLog.ActivityLog" permissionNames="ManageActivityLog" controller="ActivityLog" action="ListLogs" area="Admin" />
     </siteMapNode>
 
-    <siteMapNode id="promotions" title="Promotions" resKey="Admin.Promotions" permissionNames="ManageAffiliates, ManageNewsletterSubscribers, ManageCampaigns, ManageDiscounts"
-                   iconClass="bullhorn" imageUrl="~/Administration/Content/images/ap-marketing-white.png">
+    <siteMapNode id="promotions" title="Promotions" resKey="Admin.Promotions" permissionNames="ManageAffiliates, ManageNewsletterSubscribers, ManageCampaigns, ManageDiscounts" iconClass="bullhorn">
       <siteMapNode id="discounts" iconClass="signal fa-flip-horizontal" title="Discounts" resKey="Admin.Promotions.Discounts" permissionNames="ManageDiscounts" controller="Discount" action="List" area="Admin" />
       <siteMapNode id="affiliates" iconClass="group" title="Affiliates" resKey="Admin.Affiliates" permissionNames="ManageAffiliates" controller="Affiliate" action="List" area="Admin" />
       <siteMapNode id="newsletter-subscribers" iconClass="envelope" title="Newsletter subscriptions" resKey="Admin.Promotions.NewsletterSubscriptions" permissionNames="ManageNewsletterSubscribers" controller="NewsLetterSubscription" action="List" area="Admin" />
       <siteMapNode id="campaigns" iconClass="bullhorn" title="Campaigns" resKey="Admin.Promotions.Campaigns" permissionNames="ManageCampaigns" controller="Campaign" action="List" area="Admin" />
-      <siteMapNode id="promotion-feeds" iconClass="rss-square" title="Promotion Feeds" resKey="Plugins.KnownGroup.PromotionFeed">
-        <!--<siteMapNode id="blog-posts" title="Blog posts" resKey="Admin.ContentManagement.Blog.BlogPosts" controller="Blog" action="List" area="Admin" />
-        <siteMapNode id="blog-comments" title="Blog comments" resKey="Admin.ContentManagement.Blog.Comments" controller="Blog" action="Comments" area="Admin" />-->
-      </siteMapNode>
     </siteMapNode>
 
       
-    <siteMapNode id="cms" title="CMS" resKey="Admin.ContentManagement" permissionNames="ManagePolls, ManageNews, ManageBlog, ManageWidgets, ManageTopics, ManageForums, ManageMessageTemplates"
-                 iconClass="folder-open-o" imageUrl="~/Administration/Content/images/ap-cms-white.png">
+    <siteMapNode id="cms" title="CMS" resKey="Admin.ContentManagement" permissionNames="ManagePolls, ManageNews, ManageBlog, ManageWidgets, ManageTopics, ManageForums, ManageMessageTemplates" iconClass="folder-open-o">
       <siteMapNode id="topics" iconClass="file-o" title="Pages &amp; Topics" resKey="Admin.ContentManagement.Topics" permissionNames="ManageTopics" controller="Topic" action="List" area="Admin" />
       <siteMapNode id="news" iconClass="rss" title="News" resKey="Admin.ContentManagement.News" permissionNames="ManageNews" area="Admin" >
         <siteMapNode id="news-items" title="News items" resKey="Admin.ContentManagement.News.NewsItems" controller="News" action="List" area="Admin" />
@@ -88,7 +80,7 @@
 
       
     <siteMapNode id="configuration" title="Configuration" resKey="Admin.Configuration" permissionNames="ManageCountries,ManageLanguages,ManageSettings,ManagePaymentMethods,ManageTaxSettings,ManageShippingSettings,ManageCurrencies,ManageDeliveryTimes,ManageMeasures,ManageActivityLog,ManageACL,ManageSMSProviders,ManageEmailAccounts,ManageThemes,ManagePlugins"
-       iconClass="sliders" imageUrl="~/Administration/Content/images/ap-settings-white.png">
+       iconClass="sliders">
       <siteMapNode id="settings" iconClass="sliders" title="Settings" resKey="Admin.Configuration.Settings" permissionNames="ManageSettings">
         <siteMapNode id="general-settings" title="General and common settings" resKey="Admin.Configuration.Settings.GeneralCommon" controller="Setting" action="GeneralCommon" area="Admin" />
         <siteMapNode id="catalog-settings" title="Catalog settings" resKey="Admin.Configuration.Settings.Catalog" controller="Setting" action="Catalog" area="Admin" />
@@ -102,8 +94,8 @@
         <siteMapNode id="blog-settings" title="Blog settings" resKey="Admin.Configuration.Settings.Blog" controller="Setting" action="Blog" area="Admin" />
         <siteMapNode id="news-settings" title="News settings" resKey="Admin.Configuration.Settings.News" controller="Setting" action="News" area="Admin" />
         <siteMapNode id="forum-settings" title="Forums settings" resKey="Admin.Configuration.Settings.Forums" controller="Setting" action="Forum" area="Admin" />
-        
-        <siteMapNode isGroupHeader="true" title="[SKIP]" />
+
+        <siteMapNode id="configuration-sep-1" isGroupHeader="true" title="[SKIP]" />
         <siteMapNode id="all-settings" title="All settings (settings)" resKey="Admin.Configuration.Settings.AllSettings" controller="Setting" action="AllSettings" area="Admin" />
       </siteMapNode>
       
@@ -134,12 +126,12 @@
 
       <siteMapNode id="activity-types" iconClass="eye" title="Activity Types" resKey="Admin.Configuration.ActivityLog.ActivityLogType" permissionNames="ManageActivityLog" controller="ActivityLog" action="ListTypes" area="Admin" />
       <siteMapNode id="acl" iconClass="lock" title="Access control list" resKey="Admin.Configuration.ACL" permissionNames="ManageACL" controller="Security" action="Permissions" area="Admin" />
-      
-      <siteMapNode isGroupHeader="true" title="[SKIP]" />
+
+      <siteMapNode id="payment-methods-sep-1" isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="themes" iconClass="picture-o" title="Themes" resKey="Admin.Configuration.Themes" permissionNames="ManageThemes" controller="Theme" action="List" area="Admin"/>
     </siteMapNode>
 
-    <siteMapNode id="system" title="System" resKey="Admin.System" iconClass="database" imageUrl="~/Administration/Content/images/ap-system-white.png">
+    <siteMapNode id="system" title="System" resKey="Admin.System" iconClass="database">
       <siteMapNode id="system-log" iconClass="bolt" title="Log" resKey="Admin.System.Log" permissionNames="ManageSystemLog" controller="Log" action="List" area="Admin" />
       <siteMapNode id="queued-emails" iconClass="envelope" title="Queued emails" resKey="Admin.System.QueuedEmails" permissionNames="ManageMessageQueue" controller="QueuedEmail" action="List" area="Admin" />
       <siteMapNode id="maintenance" iconClass="database" title="Maintenance" resKey="Admin.System.Maintenance" permissionNames="ManageMaintenance" controller="Common" action="Maintenance" area="Admin" />
@@ -147,8 +139,12 @@
       <siteMapNode id="seo-names" iconClass="search" title="Search engine friendly names" resKey="Admin.System.SeNames" permissionNames="ManageMaintenance" controller="Common" action="SeNames" area="Admin" />
       <siteMapNode id="warnings" iconClass="exclamation-triangle" title="Warnings" resKey="Admin.System.Warnings" controller="Common" action="Warnings" area="Admin" />
       <siteMapNode id="system-info" iconClass="info-circle" title="System information" resKey="Admin.System.SystemInfo" controller="Common" action="SystemInfo" area="Admin" />
-      <siteMapNode isGroupHeader="true" title="[SKIP]" />
-      <siteMapNode id="plugins" iconClass="puzzle-piece" title="Plugins" resKey="Admin.Configuration.Plugins" permissionNames="ManagePlugins" controller="Plugin" action="List" area="Admin"/>
+    </siteMapNode>
+
+    <siteMapNode id="plugins" title="Plugins" resKey="Admin.Plugins" iconClass="puzzle-piece" permissionNames="ManagePlugins">
+      <siteMapNode id="promotion-feeds" iconClass="rss-square" title="Promotion Feeds" resKey="Plugins.KnownGroup.PromotionFeed"></siteMapNode>
+      <siteMapNode id="plugins-sep-1" isGroupHeader="true" title="[SKIP]" />
+      <siteMapNode id="plugins-manage" iconClass="puzzle-piece" title="Manage plugins" resKey="Admin.Plugins.Manage" permissionNames="ManagePlugins" controller="Plugin" action="List" area="Admin"/>
     </siteMapNode>
     
   </siteMapNode>
