Added DirectDebit (manual) payment plugin to composite OfflinePayment plugins

--- a/src/Plugins/SmartStore.OfflinePayment/SmartStore.OfflinePayment.csproj
+++ b/src/Plugins/SmartStore.OfflinePayment/SmartStore.OfflinePayment.csproj
@@ -87,7 +87,7 @@
     </Reference>
     <Reference Include="FluentValidation">
       <HintPath>..\..\packages\FluentValidation.5.0.0.1\lib\Net40\FluentValidation.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -141,6 +141,7 @@
     <Compile Include="Models\PaymentInfoModel.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\DirectDebitProvider.cs" />
     <Compile Include="Providers\ManualProvider.cs" />
     <Compile Include="Providers\PrepaymentStoreProvider.cs" />
     <Compile Include="Providers\PayInStoreProvider.cs" />
@@ -206,6 +207,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\OfflinePayment\ManualPaymentInfo.Mobile.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\OfflinePayment\DirectDebitPaymentInfo.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
