--- a/src/Plugins/SmartStore.OfflinePayment/SmartStore.OfflinePayment.csproj
+++ b/src/Plugins/SmartStore.OfflinePayment/SmartStore.OfflinePayment.csproj
@@ -83,7 +83,7 @@
   <ItemGroup>
     <Reference Include="Autofac">
       <HintPath>..\..\packages\Autofac.3.4.1\lib\net40\Autofac.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="FluentValidation">
       <HintPath>..\..\packages\FluentValidation.5.0.0.1\lib\Net40\FluentValidation.dll</HintPath>
