--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -97,9 +97,6 @@
   </location>
   
   <system.web>
-    <!-- TODO Update your <browserCaps> section in order to prevent adding of guest records for each request made by a search engine (although they're periodically deleted) -->
-    <!-- Find more info in browserCaps.config file -->
-    <browserCaps configSource="browserCaps.config" />
     <customErrors mode="RemoteOnly" />
     <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" /> 
@@ -135,7 +132,10 @@
     <!-- Prevent IIS 7.0 from returning a custom 404/500 error page of its own. -->
     <httpErrors existingResponse="PassThrough" />
     <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="false" />
+    <modules runAllManagedModulesForAllRequests="false">
+      <remove name="Detector" />
+      <add name="Detector" type="FiftyOne.Foundation.Mobile.Detection.DetectorModule, FiftyOne.Foundation" />
+    </modules>
     <handlers accessPolicy="Script,Read">
       <!-- Clear all handlers, prevents executing code file extensions or returning any file contents. -->
       <clear />
