--- a/src/Presentation/SmartStore.Web/51Degrees.config
+++ b/src/Presentation/SmartStore.Web/51Degrees.config
@@ -5,9 +5,9 @@
   <configSections>
     <sectionGroup name="fiftyOne">
       <section name="log" type="FiftyOne.Foundation.Mobile.Configuration.LogSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>
-      <section name="redirect" type="FiftyOne.Foundation.Mobile.Configuration.RedirectSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>
+      <!--<section name="redirect" type="FiftyOne.Foundation.Mobile.Configuration.RedirectSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>-->
       <section name="detection" type="FiftyOne.Foundation.Mobile.Detection.Configuration.DetectionSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>
-      <section name="imageOptimisation" type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>
+      <!--<section name="imageOptimisation" type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>-->
     </sectionGroup>
   </configSections>
   <fiftyOne>
@@ -62,7 +62,7 @@
       matchExpression   a regular expression used to evaluate the value of the property. (Mandatory)                        
                         -->
 
-    <redirect devicesFile="" timeout="20" firstRequestOnly="true"
+    <!--<redirect devicesFile="" timeout="20" firstRequestOnly="true"
       originalUrlAsQueryString="false" mobileHomePageUrl="~/Mobile/Default.aspx"
       mobilePagesRegex="/(Mobile|Tablet)/">
       <locations>
@@ -80,7 +80,7 @@
           <add property="IsTablet" matchExpression="True" enabled="true" />
         </location>
       </locations>
-    </redirect>
+    </redirect>-->
 
     <!--<log> element controls where and how much information should be recorded in the log.    
     logFile   The location of the log file in ASP.NET or the name of the log table in
@@ -140,8 +140,8 @@
 				        javascript that should still be served images, such as search crawlers. 
 				        Optional, defaults to 50.
     -->
-    <imageOptimisation enabled="true" maxWidth="1000" maxHeight="1000"
-      widthParam="w" heightParam="h" factor="1" defaultAuto="50"/>
+    <!--<imageOptimisation enabled="true" maxWidth="1000" maxHeight="1000"
+      widthParam="w" heightParam="h" factor="1" defaultAuto="50"/>-->
 
   </fiftyOne>
 </configuration>
